fix mob menu btn z-index

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -166,7 +166,7 @@
   width: 32px;
   height: 32px;
   background-color: transparent;
-
+  z-index: 2;
   @include desktop {
     display: none;
   }
