--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -366,6 +366,7 @@
     max-width: 379px;
     left: 47%;
     transform: translate(0, 0);
+    z-index: 1;
   }
 
   @include desktop {
